--- a/package.json
+++ b/package.json
@@ -23,19 +23,24 @@
     "url": "https://github.com/kouts/eslint-config-kouts/issues"
   },
   "homepage": "https://github.com/kouts/eslint-config-kouts#readme",
-  "dependencies": {
-    "babel-eslint": "^10.1.0",
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.13.14",
     "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.9.0"
   },
   "peerDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.25.0"
+    "@babel/eslint-parser": "^7.13.14",
+    "eslint": "^7.25.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-vue": "^7.9.0"
   }
 }
