--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "eslint-config-kouts",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "eslint configuration",
-  "main": "index.js",
+  "main": "base.js",
+  "files": [
+    "base.js",
+    "vue2.js",
+    "vue3.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "lint",
-    "vue",
-    "standard",
     "eslint",
-    "eslintconfig"
+    "eslintconfig",
+    "standard",
+    "vue"
   ],
   "repository": {
     "type": "git",
