--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "eslint-config-kouts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "eslint configuration",
   "main": "base.js",
   "files": [
     "base.js",
     "vue2.js",
-    "vue3.js"
+    "vue3.js",
+    "prettier.config.js"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,6 +30,7 @@
   },
   "homepage": "https://github.com/kouts/eslint-config-kouts#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.0",
     "@babel/eslint-parser": "^7.13.14",
     "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
@@ -36,9 +38,11 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-vue": "^7.9.0"
+    "eslint-plugin-vue": "^7.9.0",
+    "prettier": "2.2.1"
   },
   "peerDependencies": {
+    "@babel/core": "^7.14.0",
     "@babel/eslint-parser": "^7.13.14",
     "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
@@ -46,6 +50,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-vue": "^7.9.0"
+    "eslint-plugin-vue": "^7.9.0",
+    "prettier": "2.2.1"
   }
 }
