Added configVars to package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "eslint-config-kouts",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "eslint configuration",
   "main": "base.js",
   "files": [
     "base.js",
     "vue2.js",
     "vue3.js",
-    "prettier.config.js"
+    "prettier.config.js",
+    "configVars.js"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
