--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-kouts",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "eslint configuration",
   "main": "base.js",
   "files": [
@@ -13,7 +13,9 @@
     "configVars.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint \"**/*.js\"",
+    "lint-fix": "eslint --fix \"**/*.js\""
   },
   "keywords": [
     "lint",
