--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"**/*.js\"",
-    "lint-fix": "eslint --fix \"**/*.js\""
+    "lint-fix": "eslint --fix \"**/*.js\"",
+    "lint-debug": "eslint -c vue3-typescript.js --print-config \"**/*.js\" > ./eslint-debug.json"
   },
   "keywords": [
     "lint",
